# OmegA-IS

./: .antigravityignore  .env.example  .gitignore  AGENTS.md  API_KEYS_STATUS.md  AUTO-SETUP-CLICK-ME.sh  CHAT-MODE-ENABLED.txt  CHECKLIST.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEBUG-TEST.txt  DEPLOYMENT.md  ENV_GUIDE.md  FINALLY-FIXED.txt  FIXED-ALL-ISSUES.txt  GAING_STRATEGIC_REPORT.md  GEMINI.md  IDENTITY-AND-MEMORY-FIXED.txt  IDENTITY-CORRECT-NOW.txt  IDENTITY.md  IMPLEMENTATION_SUMMARY.md  OMEGA-Trinity  OMEGA.ps1  OMEGA_MASTER_TIMELINE.txt  OMEGA_MASTER_TIMELINE_COMPLETE_v3_ET.txt  OMEGA_MASTER_TIMELINE_COMPLETE_v5_ET_INFERRED.txt  OMEGA_MASTER_TIMELINE_COMPLETE_v5_ET_LINKED_v2.txt  OMEGA_SOVEREIGN_DNA.md  OMEGA_STACK.md  OMEGA_TASK_SUMMARY.md  OMEGA_TIMELINE_CROSSLINKS_v5.json  OmegA-IS  PHYLACTERY_MASTER_TIMELINE.txt  QUICK_SETUP.md  README.md  README_PRODUCTION.md  README_STRATEGIC_SESSION.md  START-HERE.txt  (+38 more)
.github/workflows/: ci.yml  docker.yml
CollectiveBrain_V1/: LICENSE
Documents/: DEEPSEEK_CHALLENGE_CORE.md  OMEGA_CONTEXT_HANDOVER.md  OMEGA_HISTORY_MASTER_INDEX.md
HANDOVER/: OMEGA_DEEPSEEK_TIMELINE.txt
Jarvis/: CLAUDE.md  package-lock.json  package.json
Jarvis-1/: .env.example  package.json
_sources/manifests/: OMEGA-Trinity.json  ORYAN.json  OmegA-AI.json  OmegA-CL.json  OmegA-IS.json  OmegA-NL.json  OmegA-SI.json  (+21 more)
bridge/: .gitignore  CLAUDE.md  orchestrator.py  setup.py  worker_pool.py
chat_history_viewer/: package.json  pnpm-lock.yaml
client/: index.html
gAIng-brAin/: log.md  package.json
gateway/: Dockerfile  requirements.txt
nginx/: nginx.conf
prometheus/: alerts.yml  prometheus.yml
scripts/: backup_volumes.sh  omega-host.mjs  omega-netmap.sh  omega-smoke.mjs  omega-start.mjs  sync-ultima.sh
skills/: ark_pilot.wasm  beacon.wasm  fusion.wasm  gateway_filter.rs  gateway_filter.wasm  heartbeat.wasm  manipulation.wasm  power_dist.rs  recall.wasm  sensory_nexus.wasm  sight.wasm  thermal_guard.wasm
src/: cloud.rs  config.rs  devices.rs  dna.rs  ear.rs  engine.rs  events.rs  evol.rs  hass.rs  jobs.rs  main.rs  modules.rs  revenue.rs  server.rs  ui.rs  voice.rs
(+477 files in other folders)
